made initial implementation of sigin api
